# warehouse

./: .gitignore  README.md  main.py  pyproject.toml  warehouse.db
tests/: conftest.py  test_service.py
warehouse_management/domain/: models.py  repositories.py  services.py  unit_of_work.py
warehouse_management/infrastructure/: database.py  orm.py  repositories.py  unit_of_work.py
